debug-alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  containers:
    - name: debug-container
      image: alpine
      command: ["sh", "-c", "sleep 3600"]
