flask-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-nodeport
spec:
  type: NodePort
  selector:
    app: flask
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
