flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80          # <<< لازم يكون 80
      targetPort: 80    # <<< لازم يكون 80 برضه
