mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask
        - podSelector:
            matchLabels:
              app: debug
      ports:
        - protocol: TCP
          port: 3306
  policyTypes:
    - Ingress
